# skybed

./: .gitignore  Cargo.toml  README.md
src/: embedder.rs  embeddings.rs  jetstream.rs  lib.rs  main.rs  post_embedder.rs
src/embeddings/: search.rs
