[package]
name = "skybed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
jetstream-oxide = "0.1.1"
atrium-api = { version = "0.24.7", default-features = false, features = [
    "namespace-appbsky",
] }
tokio = { version = "1.41.1", features = ["full", "sync", "time"] }
flume = "0.11.1"
candle-transformers = { version = "0.8.3", path = "candle/candle-transformers" }
candle-core = { version = "0.8.3", path = "candle/candle-core" }
candle-nn = { version = "0.8.3", path = "candle/candle-nn" }
hf-hub = "0.4.2"
serde_json = "1.0.139"
tokenizers = "0.21.0"
